--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h3> WEIRD MUSIC</h3>
 </div>
 <div class = "paragraph1">
-<p> So first ya got to go on to spotify cuz it's free and stuff. Then you have to search up my playlist and it's called Arnav is Cool because i am of course.
+<p>  So first you got to go on to spotify (it's free but you have to pay if you don't want the ads). Then, you will go to the search, and search up the playlist "Arnav is Cool" (yes that's my playlist and I am cool).
 </p>
 </div>
 <br>
@@ -46,29 +46,29 @@
 </div>
 <br>
 <div class = "paragraph4">
-<p>Binary Sunset is really calming tune.
+<p>"Binary Sunset" is really calming tune.
 </p>
 </div>
 <br>
 <div class = "paragraph5">
-<p> The imperial march is a classic. Extremely original tune, great incorporation of the flute and violins in the middle, just amazing.
+<p> "The imperial march" is a classic. Extremely original tune, great incorporation of the flute and violins in the middle, just amazing.
 </p>
 </div>
 <br>
 <div class = "paragraph6">
-<p> Love Pledge and the Arena is a very long song, but the orchestra goes everywhere. The beggining is just like the calm before the storm. 2:40 to 6:30 is a really underrated march.
+<p> "Love Pledge and the Arena" is a very long song, but the orchestra goes everywhere. The beggining is just like the calm before the storm. 2:40 to 6:30 is a really underrated march.
     The rest is litterally the orchestra showing how great they are.
 </p>
 </div>
 <br>
 <div class = "paragraph7">
-<p> Duel of the fates. GREAT composition. The cellos have a really nice touch. A choir carries the melody, which is extremely different. Lots of parts make you think its over,
+<p> "Duel of the fates". GREAT composition. The cellos have a really nice touch. A choir carries the melody, which is extremely different. Lots of parts make you think its over,
     but it starts going again.
 </p>
 </div>
 <br>
 <div class = "paragraph8">
-<p> The spark. Even if the sequels were garbage this song was really good. It's really great as it shows great buildup to something greater and uses a leigtmotif way back in history.
+<p> "The spark". Even if the sequels were garbage this song was really good. It's really great as it shows great buildup to something greater and uses a leigtmotif way back in history.
 </p>
 <br>
 <p> There are so much more but those are my highlights
@@ -86,9 +86,9 @@
 <br>
 <p>The clones leigtmotif. This leigtmotif is a great one as it shows how the jedi and the clones are brothers in war.</p>
 <br>
-<p>The bad batch's theme. It shows the strength of the bad batch and the skill they hold.</p>
+<p>"The bad batch's theme". It shows the strength of the bad batch and the skill they hold.</p>
 <br>
-<p>Victory and death. The sadness of the clones' betrayal is put in full force with this song.</p>
+<p>"Victory and death". The sadness of the clones' betrayal is put in full force with this song.</p>
 <br>
 <p>As Kevin Kiner has scored more than john williams, for me they don't stand out as much. Also I really don't want to do anymore so :P</p>
 </div>
